--- a/src/shared/menu/styles.module.less
+++ b/src/shared/menu/styles.module.less
@@ -180,6 +180,7 @@ a.active .menuItemIcon {
 		z-index: 1100;
 		display: block;
 		background: white;
+		background-color: white;
 		border-top: 1px solid @color-gray-border;
 		padding: 8px 6px calc(8px + env(safe-area-inset-bottom));
 		box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.08);
